# indexed-sequential-file

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  database.config  operate.py  setup.py
cmake/: project_utils.cmake
cmake/modules/: cmake_utils.cmake  project_utils.cmake
resource/: database.config  database_config.json
src/: CMakeLists.txt
src/client/: CMakeLists.txt
src/client/src/: main.cpp
src/commands/: CMakeLists.txt
src/commands/include/commands/: FileReader.hpp  Interpreter.hpp  Prompt.hpp  commands.hpp  source.hpp
src/commands/src/: FileReader.cpp  Interpreter.cpp  Prompt.cpp
src/common/: CMakeLists.txt
src/common/concepts/: CMakeLists.txt
src/common/concepts/include/concepts/: comparable.hpp  memory_access.hpp
src/common/overloaded/: CMakeLists.txt
src/common/overloaded/include/overloaded/: overloaded.hpp
src/common/wrappers/: CMakeLists.txt
src/common/wrappers/include/wrappers/: opt.hpp  optref.hpp  ref.hpp
src/database/: CMakeLists.txt
src/database/include/database/: DBMS.hpp  Database.hpp  Entry.hpp  Key.cpp  Key.hpp  Record.cpp  Record.hpp
src/database/src/: Area.cpp  Area.hpp  DBMS-internal.cpp  DBMS-internal.hpp  DBMS.cpp  Database.cpp  Database.hpp  DiskAccess.hpp  Entry.cpp  Entry.hpp  EntryPage.cpp  EntryPage.hpp  Index.cpp  Index.hpp  Key.cpp  Link.cpp  Link.hpp  Memory.hpp  Overflow.hpp  Page.cpp  Page.hpp  PageDispositor.cpp  PageDispositor.hpp  PageWithEntries.hpp  Primary.hpp  Record.cpp
