cmake_minimum_required(VERSION 3.15)
project(indexed-sequential-file CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CXX_EXTENSIONS OFF)
set_property(GLOBAL PROPERTY USE_FOLDERS TRUE)

if ($<CONFIG:Release)
    if (MSVC)
        add_compile_options(/O2)
    elseif(UNIX)
        add_compile_options(-O2)
    endif()
endif()
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules")
include(project_utils)

add_subdirectory(3rdParty)
add_subdirectory(src)
